--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -10,13 +10,9 @@ highlighter: rouge
 #
 title : simple site
 author :
-  name : Karl Broman
-  email : kbroman@gmail.com
-  github : kbroman
-  twitter : kwbroman
-  feedburner : nil
+  name : Yue Zhang
 
-production_url : http://kbroman.github.io/simple_site
+production_url : http://yjzhang.github.io/cse571_project
 
 # Tell Github to use the kramdown markdown interpreter
 # (see https://help.github.com/articles/migrating-your-pages-site-from-maruku)
