--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -12,7 +12,7 @@ title : simple site
 author :
   name : Yue Zhang
 
-production_url : http://yjzhang.github.io/cse571_project
+production_url : http://yjzhang.github.io/cse571_project/
 
 # Tell Github to use the kramdown markdown interpreter
 # (see https://help.github.com/articles/migrating-your-pages-site-from-maruku)
